# fleetpro

./: .replit  add_sample_trips.py  app.py  app_simple.py  call_driver.html  create-admin.js  create_admin.py  create_test_data.py  dispatch.html  index.html  landing.html  login.html  main.py  map_view.html  models.py  next.config.js  package-lock.json  package.json  preview.html  pyproject.toml  replit.nix  routes.py  services.html  simple_python_server.py  simple_server.js  simple_server.py  start.sh  styles.css  tailwind.config.js  tailwind.config.ts  truck_detail.html
.next/: app-build-manifest.json  trace
.next/cache/: config.json
.next/server/: server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @auth.js  @heroicons.js  framer-motion.js  motion-dom.js  motion-utils.js  next-auth.js  next.js  (+2 more)
attached_assets/: Pasted-Twilio-Webhook-Configuration-Make-sure-that-your-Twilio-webhook-is-properly-configured-to-point-to-1738211130998.txt  Pasted-Yes-you-are-correct-to-think-that-Twilio-will-not-process-the-voice-directly-from-Eleven-Labs-Twil-1738212749428.txt
prisma/: schema.prisma  seed.js
services/: ai_service.py  gmail_service.py  nextload_scraper.py
src/app/: globals.css  layout.tsx  metadata.ts  page.tsx
src/components/: ElevenLabsWidget.tsx
static/css/: styles.css
static/js/: dashboard.js  map.js
templates/: base.html  dashboard.html  fleet_services.html  gamification.html  index.html  login.html  messages.html  nextload.html  truck_detail.html
(+87 files in other folders)
