[project]
name = "repl-nix-fleettrackpro"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "google-api-python-client>=2.159.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "oauthlib>=3.2.2",
    "openai>=1.60.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "twilio>=9.4.4",
    "werkzeug>=3.1.3",
]
